--- a/tasks.json
+++ b/tasks.json
@@ -1,34 +1,34 @@
 {
   "updated_at": "2026-02-22T05:41:14Z",
-  "categories": ["才多多","顧問","開發","理財","系統"],
+  "categories": ["才多多","兆鯨","理財","系統"],
   "items": [
-    {"category":"系統","title":"郵件附件監看","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
-    {"category":"系統","title":"每日Token使用記錄","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
-    {"category":"系統","title":"記憶體優化提醒","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
-    {"category":"系統","title":"AI記憶與配置自動備份","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
-    {"category":"系統","title":"兆鯨資料每日同步與索引","status":"阻塞","next_step":"確認API權限與排程","owner_role":"SRE","blocked_reason":"API尚未授權"},
-    {"category":"系統","title":"iCloud整理檢測_0310","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
-    {"category":"系統","title":"iCloud安全整理_0330","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
+    {"category":"系統","title":"郵件附件監看","status":"已完成","next_step":"-","owner_role":"SRE","blocked_reason":"-"},
+    {"category":"系統","title":"每日Token使用記錄","status":"已完成","next_step":"-","owner_role":"SRE","blocked_reason":"-"},
+    {"category":"系統","title":"記憶體優化提醒","status":"已完成","next_step":"-","owner_role":"SRE","blocked_reason":"-"},
+    {"category":"系統","title":"AI記憶與配置自動備份","status":"已完成","next_step":"-","owner_role":"SRE","blocked_reason":"-"},
+    {"category":"兆鯨","title":"兆鯨資料每日同步與索引","status":"阻塞","next_step":"確認API權限與排程","owner_role":"SRE","blocked_reason":"API尚未授權"},
+    {"category":"系統","title":"iCloud整理檢測_0310","status":"已完成","next_step":"-","owner_role":"SRE","blocked_reason":"-"},
+    {"category":"系統","title":"iCloud安全整理_0330","status":"已完成","next_step":"-","owner_role":"SRE","blocked_reason":"-"},
     {"category":"系統","title":"daily_dashboard_update","status":"待處理","next_step":"設定自動排程","owner_role":"SRE","blocked_reason":"-"},
     {"category":"系統","title":"每日健康檢查","status":"阻塞","next_step":"檢查監控腳本","owner_role":"SRE","blocked_reason":"監控腳本未部署"},
-    {"category":"系統","title":"每日美股台股匯報","status":"阻塞","next_step":"串接行情API","owner_role":"BizOps","blocked_reason":"行情資料來源未確認"},
+    {"category":"理財","title":"每日美股台股匯報","status":"阻塞","next_step":"串接行情API","owner_role":"BizOps","blocked_reason":"行情資料來源未確認"},
     {"category":"系統","title":"Google試算表任務儀表板_每日更新","status":"待處理","next_step":"串接Sheets API","owner_role":"SRE","blocked_reason":"-"},
     {"category":"系統","title":"工作流每日檢查_0810","status":"待處理","next_step":"確認自動化觸發","owner_role":"SRE","blocked_reason":"-"},
     {"category":"系統","title":"工作流週一檢查_0840","status":"待處理","next_step":"確認cron設定","owner_role":"SRE","blocked_reason":"-"},
-    {"category":"系統","title":"才多多週會重點確認提醒","status":"待處理","next_step":"建立提醒規則","owner_role":"BizOps","blocked_reason":"-"},
-    {"category":"系統","title":"三年免招募費專案追蹤提醒","status":"待處理","next_step":"建立專案追蹤表","owner_role":"BizOps","blocked_reason":"-"},
-    {"category":"系統","title":"OpenClaw 每週版本檢查","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
-    {"category":"系統","title":"郵件分類檢查-早上","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
-    {"category":"系統","title":"台積電J值追蹤提醒","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
-    {"category":"系統","title":"0050 J值買點提醒","status":"待處理","next_step":"設定條件通知","owner_role":"BizOps","blocked_reason":"-"},
-    {"category":"系統","title":"週一台積電零股掛單提醒","status":"待處理","next_step":"確認券商API","owner_role":"BizOps","blocked_reason":"-"},
-    {"category":"系統","title":"郵件分類檢查-下午","status":"已完成","next_step":"-","owner_role":"-","blocked_reason":"-"},
-    {"category":"系統","title":"BNI簡報與key單準備提醒","status":"待處理","next_step":"整理簡報重點","owner_role":"BizOps","blocked_reason":"-"},
-    {"category":"系統","title":"散熱族群股價追蹤(早)","status":"待處理","next_step":"確認追蹤清單","owner_role":"BizOps","blocked_reason":"-"},
-    {"category":"系統","title":"散熱族群股價追蹤","status":"阻塞","next_step":"確認資料來源","owner_role":"BizOps","blocked_reason":"未取得即時報價來源"},
+    {"category":"才多多","title":"才多多週會重點確認提醒","status":"待處理","next_step":"建立提醒規則","owner_role":"BizOps","blocked_reason":"-"},
+    {"category":"才多多","title":"三年免招募費專案追蹤提醒","status":"待處理","next_step":"建立專案追蹤表","owner_role":"BizOps","blocked_reason":"-"},
+    {"category":"系統","title":"OpenClaw 每週版本檢查","status":"已完成","next_step":"-","owner_role":"SRE","blocked_reason":"-"},
+    {"category":"系統","title":"郵件分類檢查-早上","status":"已完成","next_step":"-","owner_role":"SRE","blocked_reason":"-"},
+    {"category":"理財","title":"台積電J值追蹤提醒","status":"已完成","next_step":"-","owner_role":"BizOps","blocked_reason":"-"},
+    {"category":"理財","title":"0050 J值買點提醒","status":"待處理","next_step":"設定條件通知","owner_role":"BizOps","blocked_reason":"-"},
+    {"category":"理財","title":"週一台積電零股掛單提醒","status":"待處理","next_step":"確認券商API","owner_role":"BizOps","blocked_reason":"-"},
+    {"category":"系統","title":"郵件分類檢查-下午","status":"已完成","next_step":"-","owner_role":"SRE","blocked_reason":"-"},
+    {"category":"才多多","title":"BNI簡報與key單準備提醒","status":"待處理","next_step":"整理簡報重點","owner_role":"BizOps","blocked_reason":"-"},
+    {"category":"理財","title":"散熱族群股價追蹤(早)","status":"待處理","next_step":"確認追蹤清單","owner_role":"BizOps","blocked_reason":"-"},
+    {"category":"理財","title":"散熱族群股價追蹤","status":"阻塞","next_step":"確認資料來源","owner_role":"BizOps","blocked_reason":"未取得即時報價來源"},
     {"category":"系統","title":"記憶檔案每月歸檔","status":"待處理","next_step":"設定自動歸檔腳本","owner_role":"SRE","blocked_reason":"-"},
-    {"category":"系統","title":"每月定期定額規劃","status":"待處理","next_step":"確認扣款金額","owner_role":"BizOps","blocked_reason":"-"},
-    {"category":"系統","title":"才多多財務分析月報更新","status":"待處理","next_step":"更新財報數據","owner_role":"BizOps","blocked_reason":"-"},
-    {"category":"系統","title":"農曆三月劫財月-台積電買點提醒","status":"待處理","next_step":"設定時間條件","owner_role":"BizOps","blocked_reason":"-"}
+    {"category":"理財","title":"每月定期定額規劃","status":"待處理","next_step":"確認扣款金額","owner_role":"BizOps","blocked_reason":"-"},
+    {"category":"才多多","title":"才多多財務分析月報更新","status":"待處理","next_step":"更新財報數據","owner_role":"BizOps","blocked_reason":"-"},
+    {"category":"理財","title":"農曆三月劫財月-台積電買點提醒","status":"待處理","next_step":"設定時間條件","owner_role":"BizOps","blocked_reason":"-"}
   ]
 }
