fix: 改名為自我檢測

--- a/tasks.json
+++ b/tasks.json
@@ -44,7 +44,7 @@
     },
     {
       "id": "2bdf58dc",
-      "title": "每日健康檢查",
+      "title": "自我檢測",
       "status": "待處理",
       "category": "系統"
     },
