--- a/tasks.json
+++ b/tasks.json
@@ -9,7 +9,7 @@
     {"category":"系統","title":"iCloud整理檢測_0310","status":"已完成","next_action":"","role":"","block_reason":""},
     {"category":"系統","title":"iCloud安全整理_0330","status":"已完成","next_action":"","role":"","block_reason":""},
     {"category":"系統","title":"daily_dashboard_update","status":"待處理","next_action":"設定自動排程","role":"開發","block_reason":""},
-    {"category":"系統","title":"自我檢測","status":"待處理","next_action":"每天 07:00 執行","role":"開發","block_reason":""},
+    {"category":"系統","title":"每日健康檢查","status":"待處理","next_action":"每天 07:00 執行","role":"開發","block_reason":""},
     {"category":"系統","title":"每日美股台股匯報","status":"阻塞","next_action":"串接行情API","role":"理財","block_reason":"行情資料來源未確認"},
     {"category":"系統","title":"Google試算表任務儀表板_每日更新","status":"待處理","next_action":"串接Sheets API","role":"開發","block_reason":""},
     {"category":"系統","title":"工作流每日檢查_0810","status":"待處理","next_action":"確認自動化觸發","role":"開發","block_reason":""},
