--- a/tasks.json
+++ b/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-22T22:56:05Z",
+  "updated_at": "2026-02-22T22:57:24Z",
   "categories": [
     "才多多",
     "顧問",
@@ -13,11 +13,11 @@
       "title": "AI記憶與配置自動備份",
       "status": "已完成",
       "next_action": "",
-      "role": "",
+      "role": "Dev",
       "block_reason": ""
     },
     {
-      "category": "開發",
+      "category": "系統",
       "title": "iCloud整理檢測_0310",
       "status": "已完成",
       "next_action": "",
@@ -25,7 +25,7 @@
       "block_reason": ""
     },
     {
-      "category": "開發",
+      "category": "系統",
       "title": "iCloud安全整理_0330",
       "status": "已完成",
       "next_action": "",
@@ -46,7 +46,7 @@
       "status": "阻塞",
       "next_action": "",
       "role": "",
-      "block_reason": "model not allowed: openai-code"
+      "block_reason": "model not allowed: openai-codex/gpt-5.3-"
     },
     {
       "category": "系統",
@@ -60,9 +60,9 @@
       "category": "顧問",
       "title": "【急件】兆鯨資料每日同步與索引",
       "status": "阻塞",
-      "next_action": "每日 08:00 執行",
+      "next_action": "租金狀態: ",
       "role": "昌松",
-      "block_reason": "執行逾時 (需優化腳本)"
+      "block_reason": "Error: cron: job execution timed out"
     },
     {
       "category": "系統",
@@ -85,7 +85,7 @@
       "title": "才多多週會重點確認提醒",
       "status": "待處理",
       "next_action": "",
-      "role": "",
+      "role": "HR",
       "block_reason": ""
     },
     {
@@ -93,11 +93,11 @@
       "title": "三年免招募費專案追蹤提醒",
       "status": "待處理",
       "next_action": "",
-      "role": "",
+      "role": "HR",
       "block_reason": ""
     },
     {
-      "category": "開發",
+      "category": "系統",
       "title": "OpenClaw 每週版本檢查",
       "status": "已完成",
       "next_action": "",
@@ -113,7 +113,7 @@
       "block_reason": ""
     },
     {
-      "category": "理財",
+      "category": "系統",
       "title": "台積電J值追蹤提醒",
       "status": "已完成",
       "next_action": "",
@@ -121,7 +121,7 @@
       "block_reason": ""
     },
     {
-      "category": "理財",
+      "category": "系統",
       "title": "0050 J值買點提醒",
       "status": "待處理",
       "next_action": "",
@@ -161,11 +161,11 @@
       "block_reason": ""
     },
     {
-      "category": "系統",
+      "category": "開發",
       "title": "每日Token使用記錄",
       "status": "已完成",
       "next_action": "",
-      "role": "",
+      "role": "Dev",
       "block_reason": ""
     },
     {
@@ -185,11 +185,11 @@
       "block_reason": ""
     },
     {
-      "category": "系統",
+      "category": "理財",
       "title": "散熱族群股價追蹤(早)",
       "status": "待處理",
-      "next_action": "",
-      "role": "",
+      "next_action": "目前 SOX: 價格",
+      "role": "理財助",
       "block_reason": ""
     },
     {
@@ -201,11 +201,11 @@
       "block_reason": ""
     },
     {
-      "category": "系統",
+      "category": "理財",
       "title": "散熱族群股價追蹤",
       "status": "阻塞",
-      "next_action": "",
-      "role": "",
+      "next_action": "目前 SOX: 價格",
+      "role": "理財助",
       "block_reason": "cron announce delivery failed"
     },
     {
@@ -229,7 +229,7 @@
       "title": "才多多財務分析月報更新",
       "status": "待處理",
       "next_action": "",
-      "role": "",
+      "role": "HR",
       "block_reason": ""
     },
     {
