openclaw 重建：改為開發里程碑結構，移除無效重複任務

--- a/data/openclaw/tasks.json
+++ b/data/openclaw/tasks.json
@@ -1,12 +1,122 @@
 {
-  "updated_at": "2026-02-22T00:00:00Z",
+  "updated_at": "2026-02-22T15:15:00Z",
   "tasks": [
-    { "title": "daily_dashboard_update",          "status": "待處理", "next_step": "大總管負責每日更新推送", "owner_role": "大總管", "blocked_reason": "-", "priority": "important", "type": "task",  "due": "-", "time": "06:30", "freq": "daily",      "updated_at": "2026-02-22T00:00:00Z" },
-    { "title": "Google試算表任務儀表板_每日更新",  "status": "待處理", "next_step": "-",                   "owner_role": "開發優化師", "blocked_reason": "-", "priority": "important", "type": "task",  "due": "-", "time": "09:00", "freq": "daily",      "updated_at": "2026-02-22T00:00:00Z" },
-    { "title": "工作流週一檢查",                   "status": "待處理", "next_step": "-",                   "owner_role": "開發優化師", "blocked_reason": "-", "priority": "normal",    "type": "task",  "due": "-", "time": "08:40", "freq": "weekly-mon", "updated_at": "2026-02-22T00:00:00Z" },
-    { "title": "記憶檔案每月歸檔",                 "status": "待處理", "next_step": "-",                   "owner_role": "開發優化師", "blocked_reason": "-", "priority": "normal",    "type": "task",  "due": "-", "time": "-",    "freq": "monthly",    "updated_at": "2026-02-22T00:00:00Z" },
-    { "title": "qmd索引自動更新",                  "status": "已完成", "next_step": "-",                   "owner_role": "開發優化師", "blocked_reason": "-", "priority": "normal",    "type": "task",  "due": "-", "time": "-",    "freq": "daily",      "updated_at": "2026-02-22T00:00:00Z" },
-    { "title": "線上儀表板 GitHub Pages 部署",     "status": "已完成", "next_step": "-",                   "owner_role": "開發優化師", "blocked_reason": "-", "priority": "normal",    "type": "task",  "due": "-", "time": "-",    "freq": "-",          "updated_at": "2026-02-22T00:00:00Z" },
-    { "title": "儀表板大總管統一更新機制",          "status": "已完成", "next_step": "已改為大總管統一推送", "owner_role": "開發優化師", "blocked_reason": "-", "priority": "normal",    "type": "task",  "due": "-", "time": "-",    "freq": "-",          "updated_at": "2026-02-22T00:00:00Z" }
+    {
+      "title": "cron 每日任務自動化（重設狀態）",
+      "status": "待處理",
+      "next_step": "研究 launchd / crontab 在 macOS 自動執行 update_task.py",
+      "owner_role": "開發優化師",
+      "blocked_reason": "-",
+      "priority": "important",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T15:15:00Z"
+    },
+    {
+      "title": "NotebookLM Skill 開發",
+      "status": "待處理",
+      "next_step": "規劃草稿在 dev/notebooklm-skill.md",
+      "owner_role": "開發優化師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T15:15:00Z"
+    },
+    {
+      "title": "記憶檔案每月歸檔",
+      "status": "待處理",
+      "next_step": "每月 1 日將上月日誌移入 archive/daily/",
+      "owner_role": "開發優化師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "2026/3/1",
+      "time": "-",
+      "freq": "monthly",
+      "updated_at": "2026-02-22T15:15:00Z"
+    },
+    {
+      "title": "儀表板視覺老花優化",
+      "status": "已完成",
+      "next_step": "dim#4A4A48、muted#7A7A78、手機字體全面放大、font-weight:400",
+      "owner_role": "開發優化師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T15:15:00Z"
+    },
+    {
+      "title": "個人財務 30天流水帳明細",
+      "status": "已完成",
+      "next_step": "含收支摘要、主頁大總管通知 accordion",
+      "owner_role": "開發優化師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T15:15:00Z"
+    },
+    {
+      "title": "大總管統一推送機制",
+      "status": "已完成",
+      "next_step": "其他角色不加 --push，由大總管統一 push.sh",
+      "owner_role": "開發優化師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T15:15:00Z"
+    },
+    {
+      "title": "線上儀表板 GitHub Pages 部署",
+      "status": "已完成",
+      "next_step": "dashboard.changsung.uk 上線，scripts/push.sh 自動同步",
+      "owner_role": "開發優化師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T15:15:00Z"
+    },
+    {
+      "title": "記憶分層架構 INDEX.md + topics/",
+      "status": "已完成",
+      "next_step": "-",
+      "owner_role": "開發優化師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T15:15:00Z"
+    },
+    {
+      "title": "qmd 精準檢索設定",
+      "status": "已完成",
+      "next_step": "省約 90% tokens，指令：qmd query / get / update",
+      "owner_role": "開發優化師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T15:15:00Z"
+    }
   ]
 }
