--- a/tasks.json
+++ b/tasks.json
@@ -1,244 +1,1 @@
-{
-  "updated_at": "2026-02-22T23:31:05Z",
-  "categories": [
-    "才多多",
-    "顧問",
-    "開發",
-    "理財",
-    "系統"
-  ],
-  "items": [
-    {
-      "category": "開發",
-      "title": "AI記憶與配置自動備份",
-      "status": "已完成",
-      "next_action": "",
-      "role": "Dev",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "iCloud整理檢測_0310",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "iCloud安全整理_0330",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "daily_dashboard_update",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "自我檢測",
-      "status": "阻塞",
-      "next_action": "",
-      "role": "",
-      "block_reason": "model not allowed: openai-codex/gpt-5.3-"
-    },
-    {
-      "category": "系統",
-      "title": "每日美股台股匯報",
-      "status": "阻塞",
-      "next_action": "",
-      "role": "",
-      "block_reason": "cron announce delivery failed"
-    },
-    {
-      "category": "顧問",
-      "title": "【急件】兆鯨資料每日同步與索引",
-      "status": "阻塞",
-      "next_action": "租金狀態: ",
-      "role": "昌松",
-      "block_reason": "Error: cron: job execution timed out"
-    },
-    {
-      "category": "系統",
-      "title": "工作流每日檢查_0810",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "工作流週一檢查_0840",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "才多多",
-      "title": "才多多週會重點確認提醒",
-      "status": "待處理",
-      "next_action": "",
-      "role": "HR",
-      "block_reason": ""
-    },
-    {
-      "category": "才多多",
-      "title": "三年免招募費專案追蹤提醒",
-      "status": "待處理",
-      "next_action": "",
-      "role": "HR",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "OpenClaw 每週版本檢查",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "郵件分類檢查-早上",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "台積電J值追蹤提醒",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "0050 J值買點提醒",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "郵件附件監看",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "週一台積電零股掛單提醒",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "郵件分類檢查-下午",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "確認明晚行程",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "開發",
-      "title": "每日Token使用記錄",
-      "status": "已完成",
-      "next_action": "",
-      "role": "Dev",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "記憶體優化提醒",
-      "status": "已完成",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "BNI簡報與key單準備提醒",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "理財",
-      "title": "散熱族群股價追蹤(早)",
-      "status": "待處理",
-      "next_action": "目前 SOX: 價格",
-      "role": "理財助",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "週五過濾材提醒-動態",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "理財",
-      "title": "散熱族群股價追蹤",
-      "status": "阻塞",
-      "next_action": "目前 SOX: 價格",
-      "role": "理財助",
-      "block_reason": "cron announce delivery failed"
-    },
-    {
-      "category": "系統",
-      "title": "記憶檔案每月歸檔",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "每月定期定額規劃",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    },
-    {
-      "category": "才多多",
-      "title": "才多多財務分析月報更新",
-      "status": "待處理",
-      "next_action": "",
-      "role": "HR",
-      "block_reason": ""
-    },
-    {
-      "category": "系統",
-      "title": "農曆三月劫財月-台積電買點提醒",
-      "status": "待處理",
-      "next_action": "",
-      "role": "",
-      "block_reason": ""
-    }
-  ]
-}
+{"error": "Expecting value: line 1 column 1 (char 0)"}
